# aoc-2023

./: LICENSE  README.md  pyproject.toml
src/aoc/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_09.py  day_24.py
tests/: test_solutions.py
tests/examples/: 01.yml  02.yml  03.yml  05.yml  06.yml  07.yml  08.yml  24.yml
